bonus/confs/certmanager/ingress-gitlab.askhalog.space.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt-prod
    #kubernetes.io/tls-acme: "true"
    #ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-[MY_GIT_DOMAIN]
  namespace: gitlab
  labels:
    app: webservice
spec:
  rules:
  - host: [MY_GIT_DOMAIN]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: gitlab-webservice-default
              port:
                number: 8181
  tls:
  - hosts:
    - [MY_GIT_DOMAIN]
    secretName: [MY_GIT_DOMAIN]-tls
